added the js for which tabs you're on ill fix the html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="a1"  href="#">Sign up</a>
             <a class="a2"  href="#">Log in</a>
         </div>
-        <div class="signup-form"></div>
+        <div class="signup-form">
         <div class="header">Signup For Free</div>
         <form action="">
             <input type="text" placeholder="Firstname">
@@ -23,6 +23,7 @@
             <input class="email" type="password" placeholder="Password">
             <input type="submit" value="Signup">
         </form>
+        </div>
     </div>
     <div class="login-form"></div>
         <div class="header header1">Login for free</div>
